- 見た目をそれっぽく変更

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -3,3 +3,6 @@ title:
   salmon_id: Salmon ID
   golden_ikura_num: Golden Eggs
   ikura_num: Power Eggs
+job_result:
+  is_clear: Clear!
+  is_failure: Defeat
