--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -6,4 +6,10 @@ title:
 job_result:
   is_clear: Clear!!
   is_failure: Failure
-
+grade:
+  profreshional: たつじん
+  overachiver: じゅくれん
+  gogetter: いちにんまえ
+  parttimer: はんにんまえ
+  apparentice: かけだし
+  intern: けんしゅう
