- ルーティングを追加

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -6,6 +6,10 @@ title:
 job_result:
   is_clear: Clear!
   is_failure: Defeat
+result:
+  wave: Wave
+  is_clear: ✓
+  is_failure: ✘
 grade:
   profreshional: Profreshional
   overachiver: Overachiver
