- 翻訳ファイルの追加、プレイヤーの追加

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,6 +10,8 @@ result:
   wave: Wave
   is_clear: ✓
   is_failure: ✘
+  boss_salmonids_defeated: Boss Salmonids defeated
+  golden_ikura_num_appearances: Appearances
 grade:
   profreshional: Profreshional
   overachiver: Overachiver
