- 不要ファイルの削除, 失敗理由の表示, 失敗WAVEの表示の修正

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -12,6 +12,8 @@ result:
   is_failure: ✘
   boss_salmonids_defeated: Boss Salmonids defeated
   golden_ikura_num_appearances: Appearances
+  time_limit: Time Up!
+  wipe_out: DEFEAT!
 grade:
   profreshional: Profreshional
   overachiver: Overachiver
