--- a/locales/en.yml
+++ b/locales/en.yml
@@ -7,6 +7,7 @@ job_result:
   is_clear: Clear!
   is_failure: Defeat
 result:
+  danger_rate: Danger rate
   wave: Wave
   is_clear: ✓
   is_failure: ✘
