--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -12,6 +12,13 @@ tabs:
   schedules: スケジュール
   results: リザルト
 event_type:
+  "0": "-"
+  "1": ラッシュ
+  "2": キンシャケ探し
+  "3": グリル発進
+  "4": ハコビヤ襲来
+  "5": 霧
+  "6": ドスコイ大量発生
   fog: 霧
   cohock_charge: ドスコイ大量発生
   goldie_seeking: キンシャケ探し
@@ -24,11 +31,11 @@ version:
   app: アプリ
   db: データベース
 stage_name:
-  "5003": トキシラズいぶし工房
-  "5004": 朽ちた箱舟 ポラリス
+  "5000": シェケナダム
   "5001": 難破船 ドン・ブラコ
   "5002": 海上集落シャケト場
-  "5000": シェケナダム
+  "5003": トキシラズいぶし工房
+  "5004": 朽ちた箱舟 ポラリス
 app:
   subscription: 購読
   appearances: 外観
@@ -39,6 +46,9 @@ app:
   system: システム
   accounts: アカウント
 water_level:
+  "0": 干潮
+  "1": 通常
+  "2": 満潮
   low: 干潮
   normal: 通常
   high: 満潮
